--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,9 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "aws/aws-sdk-php": "~2.6",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
-        "guzzlehttp/guzzle": "^6.3",
+        "jrm2k6/cloudder": "0.4.*",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
